# cpp-experiments

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile.dev  README.md  cmake_install.cmake  contents.kv  experiment  inplace.txt  return_no_clone.txt  return_no_clone_no_copy.txt  sample  sorted_return_clone.txt  sorted_return_no_clone.txt
data/: mapBenchmarks.csv  return_clone.txt  sorted_inplace.txt  sorted_return_no_clone_no_copy.txt
notebooks/: MapReadWriteAnalysis.ipynb
python/call-cpp-from-python/: README.md  builder.py  spammodule.c  test.py
resources/: orderstream1.txt  orderstream2.txt  orderstream3.txt  volcapture1.txt  volcapture2.txt
src/: http.cpp
src/data/: Containers.cpp  DatastructureSerialize.cpp  DatastructureSerialize.h
src/experiment/: Experiment.cpp  Experiment2.cpp  Experiment3.cpp  Experiment4.cpp
src/http/: Throttle.cpp
src/kv/: FastKeyValue.cpp  MeasureKV.cpp  MeasureKV.h
src/parser/: Internal.cpp  Internal.h
test/: Containers.cpp  DatastructureSerialize.cpp  Interview.cpp  OrderBook.cpp  Test.cpp  ThreadPool.cpp  ThreadPool.h  VolumeCapture.cpp  http.cpp  http.h  test.py
